<resources>
    <string name="app_name">PlanBee</string>

    <string name="upcoming_events_title">Upcoming events</string>
    <string name="nearby_events_title">Nearby events</string>
    <string name="recommended_events_title">Recommended events</string>
    <string name="sponsored_events_title">Sponsored events</string>
    <string name="popular_events_title">Popular events</string>
    <string name="top10_events_title">Top 10 events</string>
    <string name="new_events_title">New events</string>

    <string name="chat_enter_text">Enter Text </string>
    <string name="chat_send">SEND </string>

    <string name="home_title">PlanBee</string>

    <string name="group_chats_title">Group chats</string>
    <string name="group_chats_icon_description">Group profile picture icon</string>

    <string name="my_events_title">My events</string>
    <string name="my_events_icon_description">Icon for an event</string>

    <string name="view_event_icon_description">Icon for view event</string>
    <string name="view_event_Date">Date:</string>
    <string name="view_event_Location">Location:</string>
    <string name="view_event_Host">Host:</string>
    <string name="view_event_GroupName">Public/Group Name:</string>
    <string name="view_event_Description">Description</string>

    <string name="calendar_Confirm">Bee there</string>
    <string name="calendar_More_Info">More Information</string>

    <string name="login_title">Login to PlanBee</string>
    <string name="login_forgot_password_text">Forgotten your password? Reset Password</string>
    <string name="login_create_account_text">Don’t have an account? Create Account</string>
    <string name="login_login_button">Login</string>
    <string name="login_create_account_button">Create account</string>
    <string name="login_logo_description">PlanBee logo grey</string>
    <string name="login_username_hint">Username or email address</string>
    <string name="login_password_hint">Password</string>

    <string name="create_account_title">Create an account</string>
    <string name="create_account_confirm_button">Confirm</string>
    <string name="create_account_cancel_button">Cancel</string>
    <string name="create_account_logo_description">PlanBee logo grey</string>
    <string name="create_account_name_hint">Name</string>
    <string name="create_account_username_hint">Username</string>
    <string name="create_account_email_hint">Email</string>
    <string name="create_account_password_hint">Password</string>
    <string name="create_account_confirm_password_hint">Confirm Password</string>

    <string name="nav_home_title">Home</string>
    <string name="nav_group_chats_title">Group chats</string>
    <string name="nav_events_title">Events</string>
    <string name="nav_my_events_title">My events</string>
    <string name="nav_advanced_search_title">Advanced search</string>
    <string name="nav_browse_events_title">Browse events</string>
    <string name="nav_calendar_title">Calendar</string>
    <string name="nav_login_title">Login</string>
    <string name="nav_create_account_title">Create account</string>
    <string name="nav_map_title">Map</string>
    <string name="nav_bottom_settings">Settings</string>
    <string name="nav_bottom_help">Help</string>
    <string name="nav_bottom_contact_us">Contact us</string>
    <string name="nav_bottom_send_feedback">Send feedback</string>
    <string name="nav_bottom_privacy_policy">Privacy policy</string>
    <string name="nav_bottom_tos">Terms of service</string>
    <string name="title_activity_map">Map</string>

</resources>
