<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/nav_login_title" />

        <item
            android:id="@+id/nav_create_account"
            android:icon="@drawable/ic_create_account"
            android:title="@string/nav_create_account_title" />

        <item
            android:id="@+id/nav_my_events"
            android:icon="@drawable/ic_event"
            android:title="@string/nav_my_events_title" />

        <item
            android:id="@+id/nav_group_chats"
            android:icon="@drawable/ic_groups"
            android:title="@string/nav_group_chats_title" />

        <item
            android:id="@+id/nav_browse_events"
            android:icon="@drawable/ic_event"
            android:title="@string/nav_browse_events_title" />

        <item
            android:id="@+id/nav_advanced_search"
            android:icon="@drawable/ic_search"
            android:title="@string/nav_advanced_search_title" />

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/nav_calendar_title" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/nav_map_title" />
    </group>
</menu>