<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/map_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Contents of nav drawer -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/navigation_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/bottom_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_bottom_settings" />

            <TextView
                android:id="@+id/bottom_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_bottom_help" />

            <TextView
                android:id="@+id/bottom_contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_bottom_contact_us" />

            <TextView
                android:id="@+id/bottom_send_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_bottom_send_feedback" />

            <TextView
                android:id="@+id/bottom_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_bottom_privacy_policy" />

            <TextView
                android:id="@+id/bottom_tos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_bottom_tos" />

        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>