<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btn_open_nav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadingEdge="none|horizontal"
            android:padding="20dp"
            android:src="@drawable/ic_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_chat_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/group_chats_title"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_open_settings"
            app:layout_constraintStart_toEndOf="@+id/btn_open_nav"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_open_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadingEdge="none|horizontal"
            android:padding="20dp"
            android:src="@drawable/ic_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />





    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#dfdfdf"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_chatbox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/layout_chatbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="48dp"
        android:background="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">


        <EditText
            android:id="@+id/edittext_chatbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/chat_enter_text"
            android:maxLines="6" />

        <Button
            android:id="@+id/button_chatbox_send"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:onClick="sendMessage"
            android:text="@string/chat_send"
            android:textSize="14dp" />
            />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/chats_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:padding="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_open_settings"
        app:layout_constraintBottom_toTopOf="@+id/layout_chatbox">

    </android.support.v7.widget.RecyclerView>

    </android.support.constraint.ConstraintLayout>

    <!-- Contents of nav drawer -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/navigation_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/bottom_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_bottom_settings" />

            <TextView
                android:id="@+id/bottom_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_bottom_help" />

            <TextView
                android:id="@+id/bottom_contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_bottom_contact_us" />

            <TextView
                android:id="@+id/bottom_send_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_bottom_send_feedback" />

            <TextView
                android:id="@+id/bottom_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_bottom_privacy_policy" />

            <TextView
                android:id="@+id/bottom_tos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_bottom_tos" />

        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>