<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/sch_brown">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageButton
        android:id="@+id/btn_open_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fadingEdge="none|horizontal"
        android:padding="20dp"
        android:src="@drawable/ic_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtEventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text=""
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_open_settings"
        app:layout_constraintStart_toEndOf="@+id/btn_open_nav"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_open_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fadingEdge="none|horizontal"
        android:padding="20dp"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgEvent"
        android:layout_width="154dp"
        android:layout_height="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/mapView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/basketball_icon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="84dp"
        android:text="@string/view_event_Date"
        app:layout_constraintEnd_toStartOf="@+id/txtDate"
        app:layout_constraintStart_toEndOf="@+id/imgEvent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="126dp"
        android:text="@string/view_event_Location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgEvent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/view_event_Host"
        app:layout_constraintEnd_toStartOf="@+id/txtHost"
        app:layout_constraintStart_toEndOf="@+id/imgEvent"
        app:layout_constraintTop_toBottomOf="@+id/txtLocation" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="126dp"
        android:text="@string/view_event_GroupName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgEvent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="359dp"
        android:layout_height="152dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgEvent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/view_event_Description"
        app:layout_constraintBottom_toTopOf="@+id/txtDescription"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/btn_open_settings" />

    <EditText
        android:id="@+id/txtLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgEvent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/txtHost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/txtLocation" />

    <TextView
        android:id="@+id/txtGroupName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgEvent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="375dp"
        android:layout_height="132dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
    <!-- Contents of nav drawer -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/navigation_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/bottom_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_bottom_settings" />

            <TextView
                android:id="@+id/bottom_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_bottom_help" />

            <TextView
                android:id="@+id/bottom_contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_bottom_contact_us" />

            <TextView
                android:id="@+id/bottom_send_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_bottom_send_feedback" />

            <TextView
                android:id="@+id/bottom_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_bottom_privacy_policy" />

            <TextView
                android:id="@+id/bottom_tos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_bottom_tos" />

        </LinearLayout>

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
